<resources>
    <string name="app_name">Dog Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profil">Profil</string>

    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="title_main">title main</string>
    <string name="searchByName">search By Name</string>
    <string name="number">number</string>
    <string name="full_name">full name</string>
    <string name="age">age</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="save">save</string>
    <string name="delete">delete</string>

    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="top_icon">TOP ICON</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //map
    <string name="mapbox_access_token">pk.eyJ1Ijoia2FsZWIxOSIsImEiOiJja2ZvMHAwbjMxcnNkMnFrdTR6aGg3OXpwIn0.PkqbwtSy5SOLLqSaYvO46w</string>
    <string name="mode">Light Mode</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="tips_trick"><![CDATA[Tips & Trick]]></string>

    <string-array name="jenisKelamin">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="tipe">
        <item>Anjing</item>
        <item>Kucing</item>
    </string-array>
</resources>